--- a/index.html
+++ b/index.html
@@ -278,6 +278,18 @@
     <!-- 隐藏的文件输入 -->
     <input type="file" id="excelFileInput" accept=".xlsx,.xls" style="display: none;" onchange="handleExcelImport(event)">
 
+    <!-- 浮动操作栏 -->
+    <div class="floating-actions" id="floatingActions">
+        <button class="btn btn-info btn-floating" onclick="selectedAddCoins()" id="floatingSelectedAddBtn" disabled>
+            <i class="fas fa-check-circle"></i>
+            <span class="btn-text">选中加星币</span>
+        </button>
+        <button class="btn btn-warning btn-floating" onclick="selectedSubtractCoins()" id="floatingSelectedSubtractBtn" disabled>
+            <i class="fas fa-times-circle"></i>
+            <span class="btn-text">选中减星币</span>
+        </button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
